--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -51,20 +51,35 @@ p {
 }
 
 /* ヘッダー */
+#header {
+  background-color: teal;
+}
 
 #logo {
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
   color: #fff;
-  text-transform: uppercase;
+  // text-transform: uppercase;
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
+  font-style: italic;
 }
 
 #logo:hover {
-  color: #fff;
+  color: #808080;
+  text-decoration: none;
+}
+
+.header-list {
+  color: #fff !important;
+  font-weight: bold;
+}
+
+.header-list:hover {
+  color: #808080 !important;
+  font-weight: bold;
   text-decoration: none;
 }
 
